--- a/ementa.html
+++ b/ementa.html
@@ -256,9 +256,9 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>HOBSBAWM, Eric. A Era do Capital. Rio de Janeiro, Paz e Terra, 2004. “O mundo unificado”, Pp. 63-82.</li>
-<li>FERGUSON, Niall. A praça e a torre. Redes, hierarquias e a luta pelo poder global. São Paulo, Planeta do Brasil, 2018. Pp. 11-35</li>
-<li>SILVEIRA, P. T. DA. A arqueologia de um nome. In: História, técnica e novas mídias: reflexões sobre a história na era digital. Tese de doutorado. Porto Alegre: UFRGS, 2018. pp 28-62</li>
+<li><a href="biblio/hobsbawm.pdf">HOBSBAWM, Eric. A Era do Capital. Rio de Janeiro, Paz e Terra, 2004. “O mundo unificado”, Pp. 63-82.</a></li>
+<li><a href="biblio/ferguson.pdf">FERGUSON, Niall. A praça e a torre. Redes, hierarquias e a luta pelo poder global. São Paulo, Planeta do Brasil, 2018. Pp. 11-35</a></li>
+<li><a href="https://www.lume.ufrgs.br/handle/10183/189249">SILVEIRA, P. T. DA. A arqueologia de um nome. In: História, técnica e novas mídias: reflexões sobre a história na era digital. Tese de doutorado. Porto Alegre: UFRGS, 2018. pp 28-62</a></li>
 </ul>
 </section>
 <section id="semana-4" class="level3">
