--- a/ementa.html
+++ b/ementa.html
@@ -392,7 +392,8 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>Materiais a definir.</li>
+<li>BLOCH, Marc. Apologia da história ou o ofício do historiador. Rio de Janeiro: Jorge Zahar, 2001. Pp. 51-87</li>
+<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. [s. l.], 2022. Disponível em: https://dspace.uevora.pt/rdpc/handle/10174/32165. Acesso em: 4 out. 2024.</li>
 </ul>
 </section>
 <section id="semana-8" class="level3">
@@ -448,7 +449,8 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>Materiais a definir.</li>
+<li>BONALDO, Rodrigo Bragio. As palavras e os tokens: Projeção vetorial aplicada ao estudo da semântica dos tempos históricos. Revista de Teoria da História, [s. l.], v. 27, n.&nbsp;1, p.&nbsp;7–50, 2024.</li>
+<li>GILARDI, Fabrizio; ALIZADEH, Meysam; KUBLI, Maël. ChatGPT Outperforms Crowd-Workers for Text-Annotation Tasks. [S. l.]: arXiv, 2023. Disponível em: http://arxiv.org/abs/2303.15056. Acesso em: 4 abr. 2023.</li>
 </ul>
 </section>
 <section id="semana-10" class="level3">
