--- a/ementa.html
+++ b/ementa.html
@@ -393,7 +393,7 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
 <li>BLOCH, Marc. Apologia da história ou o ofício do historiador. Rio de Janeiro: Jorge Zahar, 2001. Pp. 51-87</li>
-<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. [s. l.], 2022. Disponível em: https://dspace.uevora.pt/rdpc/handle/10174/32165. Acesso em: 4 out. 2024.</li>
+<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. [s. l.], 2022. Disponível em: <a href="https://dspace.uevora.pt/rdpc/handle/10174/32165">https://dspace.uevora.pt/rdpc/handle/10174/32165</a>. Acesso em: 4 out. 2024.</li>
 </ul>
 </section>
 <section id="semana-8" class="level3">
@@ -421,7 +421,8 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>Materiais a definir.</li>
+<li>Megan S. Kane, “Corpus Analysis with spaCy,” Programming Historian 12 (2023), <a href="https://doi.org/10.46430/phen0113">https://doi.org/10.46430/phen0113</a>.</li>
+<li>Andrew Akhlaghi, “OCR and Machine Translation,” Programming Historian 10 (2021), <a href="https://doi.org/10.46430/phen0091">https://doi.org/10.46430/phen0091</a>.</li>
 </ul>
 </section>
 <section id="semana-9" class="level3">
@@ -449,8 +450,8 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>BONALDO, Rodrigo Bragio. As palavras e os tokens: Projeção vetorial aplicada ao estudo da semântica dos tempos históricos. Revista de Teoria da História, [s. l.], v. 27, n.&nbsp;1, p.&nbsp;7–50, 2024.</li>
-<li>GILARDI, Fabrizio; ALIZADEH, Meysam; KUBLI, Maël. ChatGPT Outperforms Crowd-Workers for Text-Annotation Tasks. [S. l.]: arXiv, 2023. Disponível em: http://arxiv.org/abs/2303.15056. Acesso em: 4 abr. 2023.</li>
+<li>BONALDO, Rodrigo Bragio. As palavras e os tokens: Projeção vetorial aplicada ao estudo da semântica dos tempos históricos. Revista de Teoria da História, [s. l.], v. 27, n.&nbsp;1, p.&nbsp;7–50, 2024. DOI: <a href="https://doi.org/10.5216/rth.v27i1.79370">https://doi.org/10.5216/rth.v27i1.79370</a>.</li>
+<li>GILARDI, Fabrizio; ALIZADEH, Meysam; KUBLI, Maël. ChatGPT Outperforms Crowd-Workers for Text-Annotation Tasks. [S. l.]: arXiv, 2023. Disponível em: <a href="http://arxiv.org/abs/2303.15056">http://arxiv.org/abs/2303.15056</a>. Acesso em: 4 abr. 2023.</li>
 </ul>
 </section>
 <section id="semana-10" class="level3">
@@ -506,7 +507,8 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>Materiais a definir.</li>
+<li>KELLY T. M., Teaching History in the Digital Age, Book Collections on Project MUSE (University of Michigan Press, 2013). Preface, v-ix; Introduction, 1-13.</li>
+<li>CORDEIRO, Leonardo Zenha; COSTA, Renato Pinheiro da. Problematizações das tecnologias digitais na formação do professor de história no contexto amazônico. Esboços: histórias em contextos globais, [s. l.], v. 27, n.&nbsp;45, p.&nbsp;228–248, 2020. Disponível em: <a href="https://doi.org/10.5007/2175-7976.2020.e68318">https://doi.org/10.5007/2175-7976.2020.e68318</a>.</li>
 </ul>
 </section>
 <section id="semana-12" class="level3">
@@ -534,7 +536,7 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>Materiais a definir.</li>
+<li>Eric Brasil, “Git como ferramenta metodológica em projetos de História (parte 1)”, Programming Historian em português 3 (2023), <a href="https://doi.org/10.46430/phpt0045">https://doi.org/10.46430/phpt0045</a>.</li>
 </ul>
 </section>
 <section id="semana-13" class="level3">
