update cancelamento aula 9

--- a/ementa.html
+++ b/ementa.html
@@ -427,6 +427,11 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="semana-9" class="level3">
 <h3 class="anchored" data-anchor-id="semana-9">Semana 9</h3>
+<p><strong>AULA CANCELADA</strong></p>
+<p>Prezados(as) alunos(as),</p>
+<p>Informamos que a aula do dia 29/10/2024 (Aula 9), com o tema “Repensando a pesquisa histórica na Era Digital”, será cancelada. O professor Eric teve um imprevisto profissional e não conseguirá chegar a tempo para ministrar a aula.</p>
+<p>O cronograma da disciplina será reorganizado para compensar o conteúdo, e em breve enviaremos as atualizações.</p>
+<p>Agradecemos a compreensão de todos(as)!</p>
 <table class="table">
 <colgroup>
 <col style="width: 7%">
