--- a/cronograma.html
+++ b/cronograma.html
@@ -114,7 +114,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">Eric Brasil</td>
 <td style="text-align: center;">2025.2</td>
 <td style="text-align: center;">60h</td>
-<td style="text-align: center;">Quintas, 14h-18h</td>
+<td style="text-align: center;">Quartas, 14h-18h</td>
 <td style="text-align: center;">Remoto</td>
 <td style="text-align: center;">profericbrasil@unilab.edu.br</td>
 </tr>
