atualizações gerais para aula 1

--- a/aulas/1.html
+++ b/aulas/1.html
@@ -178,7 +178,7 @@ Eric Brasil
 <h2>2. Cronograma e Ementa da Disciplina</h2>
 <ul>
 <li>Disponível em: <a href="https://ericbrasil.com.br/hd-ufrrj/ementa">https://ericbrasil.com.br/hd-ufrrj/ementa</a></li>
-<li>Discussão sobre o cronograma</li>
+<li>Discussão sobre o cronograma: <a href="https://ericbrasil.com.br/hd-ufrrj/cronograma">https://ericbrasil.com.br/hd-ufrrj/cronograma</a></li>
 </ul>
 </section>
 <section id="apresentação-dos-estudantes" class="slide level2 center">
