--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="cronograma_files/libs/clipboard/clipboard.min.js"></script>
-<script src="cronograma_files/libs/quarto-html/quarto.js" type="module"></script>
-<script src="cronograma_files/libs/quarto-html/tabsets/tabsets.js" type="module"></script>
-<script src="cronograma_files/libs/quarto-html/popper.min.js"></script>
-<script src="cronograma_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="cronograma_files/libs/quarto-html/anchor.min.js"></script>
-<link href="cronograma_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="cronograma_files/libs/quarto-html/quarto-syntax-highlighting-e1a5c8363afafaef2c763b6775fbf3ca.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="cronograma_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="cronograma_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="cronograma_files/libs/bootstrap/bootstrap-88510a911b976a8896194c5cac29a256.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="index_files/libs/clipboard/clipboard.min.js"></script>
+<script src="index_files/libs/quarto-html/quarto.js" type="module"></script>
+<script src="index_files/libs/quarto-html/tabsets/tabsets.js" type="module"></script>
+<script src="index_files/libs/quarto-html/popper.min.js"></script>
+<script src="index_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="index_files/libs/quarto-html/anchor.min.js"></script>
+<link href="index_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="index_files/libs/quarto-html/quarto-syntax-highlighting-e1a5c8363afafaef2c763b6775fbf3ca.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="index_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="index_files/libs/bootstrap/bootstrap-88510a911b976a8896194c5cac29a256.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -90,174 +90,75 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<table class="caption-top table">
-<colgroup>
-<col style="width: 16%">
-<col style="width: 11%">
-<col style="width: 6%">
-<col style="width: 22%">
-<col style="width: 7%">
-<col style="width: 36%">
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: center;">Docente</th>
-<th style="text-align: center;">Período</th>
-<th style="text-align: center;">CH</th>
-<th style="text-align: center;">Horário</th>
-<th style="text-align: center;">Formato</th>
-<th style="text-align: center;">Contato</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: center;">Eric Brasil</td>
-<td style="text-align: center;">2025.2</td>
-<td style="text-align: center;">60h</td>
-<td style="text-align: center;">Quartas, 14h-18h</td>
-<td style="text-align: center;">Remoto</td>
-<td style="text-align: center;">profericbrasil@unilab.edu.br</td>
-</tr>
-</tbody>
-</table>
-<section id="cronograma" class="level2">
-<h2 class="anchored" data-anchor-id="cronograma">Cronograma</h2>
-<table class="caption-top table">
-<colgroup>
-<col style="width: 6%">
-<col style="width: 12%">
-<col style="width: 54%">
-<col style="width: 4%">
-<col style="width: 22%">
-</colgroup>
-<thead>
-<tr class="header">
-<th>Aula</th>
-<th>Data</th>
-<th>Tema</th>
-<th>CH</th>
-<th>Observação</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>1</td>
-<td>13/08/2025</td>
-<td>Apresentação da disciplina: História Digital? Que?!</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="even">
-<td>2</td>
-<td>20/08/2025</td>
-<td>História e tecnologia: do código Morse aos LLMs</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="odd">
-<td>3</td>
-<td>27/08/2025</td>
-<td>Oficina I: Atualizando a caixa de ferramentas (parte 1)</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="even">
-<td>4</td>
-<td>03/09/2025</td>
-<td>Oficina I: Atualizando a caixa de ferramentas (parte 2)</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="odd">
-<td>5</td>
-<td>10/09/2025</td>
-<td>Fontes digitais, coleções e plataformas online</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="even">
-<td>6</td>
-<td>17/09/2025</td>
-<td>Oficina II: coleta e organização de dados</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="odd">
-<td>7</td>
-<td>24/09/2025</td>
-<td>Codificação na geração, classificação e análise de informação histórica</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="even">
-<td>8</td>
-<td>01/10/2025</td>
-<td>Oficina III: OCR e leitura distante com NLP para a História</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="odd">
-<td>9</td>
-<td>08/10/2025</td>
-<td>Repensando a pesquisa histórica na virada das IAs Generativas</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="even">
-<td>-</td>
-<td>15/10/2025</td>
-<td><strong>Sem aula</strong></td>
-<td>-</td>
-<td>Feriado 📌</td>
-</tr>
-<tr class="odd">
-<td>10</td>
-<td>22/10/2025</td>
-<td>Oficina IV: Inteligência Artificial - conceitos e usos</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="even">
-<td>11</td>
-<td>29/10/2025</td>
-<td>Por uma hermenêutica digital aumentada: RAG na pesquisa</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="odd">
-<td>12</td>
-<td>05/11/2025</td>
-<td>Oficina V: Rodando LLMs localmente</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="even">
-<td>13</td>
-<td>12/11/2025</td>
-<td>Ensino de história, história pública e divulgação num mundo de IAs</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-<tr class="odd">
-<td>14</td>
-<td>19/11/2025</td>
-<td>Oficina VI: a definir</td>
-<td>4</td>
-<td>Prática 🛠️</td>
-</tr>
-<tr class="even">
-<td>15</td>
-<td>26/11/2025</td>
-<td>Novos desafios éticos e os riscos das IAs</td>
-<td>4</td>
-<td>Debates teóricos 📖</td>
-</tr>
-</tbody>
-</table>
-<p><a href="https://ericbrasil.com.br/hd-ufrrj/">Voltar para a página inicial</a></p>
-<p><a href="https://github.com/ericbrasiln/hd-ufrrj">Ir para o repositório da disciplina no GitHub</a></p>
+<section id="introdução-à-história-digital---im-1256---2025.2" class="level1">
+<h1>Introdução à História Digital - IM-1256 - 2025.2</h1>
+<p>Bem-vindo ao repositório oficial da disciplina <strong>Introdução à História Digital</strong>, oferecida no Programa de Pós-Graduação Interdisciplinar em Humanidades Digitais da Universidade Federal Rural do Rio de Janeiro (UFRRJ) no semestre 2025.2.</p>
+<section id="sobre-a-disciplina" class="level2">
+<h2 class="anchored" data-anchor-id="sobre-a-disciplina">Sobre a Disciplina</h2>
+<p>A disciplina tem como objetivo analisar o impacto das transformações tecnológicas atuais e da expansão acelerada do volume de fontes históricas disponíveis em meio digital sobre o processo de produção, ensino e difusão do conhecimento histórico. Envolve a análise de questões teórico-metodológicas relativas à pesquisa e ensino de história, bem como à memória coletiva e história pública, identificando os impactos atuais e potenciais da tecnologia digital. Também examina ferramentas digitais utilizadas para preservar, analisar e interpretar fontes históricas, incentivando a exploração de novas soluções para potencializar oportunidades e enfrentar desafios.</p>
+</section>
+<section id="ementa" class="level2">
+<h2 class="anchored" data-anchor-id="ementa">Ementa</h2>
+<p>A ementa completa da disciplina, incluindo os conteúdos programáticos, bibliografia e cronograma das aulas, está disponível em:</p>
+<p><a href="https://ericbrasil.com.br/hd-ufrrj/ementa"><strong>Ementa - Introdução à História Digital</strong></a></p>
+</section>
+<section id="professor" class="level2">
+<h2 class="anchored" data-anchor-id="professor">Professor</h2>
+<ul>
+<li><strong>Eric Brasil</strong>
+<ul>
+<li>E-mail: <a href="mailto:profericbrasil@gmail.com">profericbrasil@gmail.com</a></li>
+<li>ORCID: <a href="https://orcid.org/0000-0001-5067-8475">0000-0001-5067-8475</a></li>
+<li>Afiliação: Universidade da Integração Internacional da Lusofonia Afro-Brasileira (UNILAB)</li>
+<li>Site pessoal: <a href="https://ericbrasil.com.br">ericbrasil.com.br</a></li>
+</ul></li>
+</ul>
+</section>
+<section id="formato-e-horário" class="level2">
+<h2 class="anchored" data-anchor-id="formato-e-horário">Formato e Horário</h2>
+<ul>
+<li><strong>Código da disciplina</strong>: IM-1256</li>
+<li><strong>Carga horária</strong>: 60 horas</li>
+<li><strong>Dia e horário das aulas</strong>: Quartas-feiras, das 14h às 18h</li>
+<li><strong>Formato</strong>: Totalmente remoto</li>
+</ul>
+</section>
+<section id="recursos-e-materiais" class="level2">
+<h2 class="anchored" data-anchor-id="recursos-e-materiais">Recursos e Materiais</h2>
+<ul>
+<li>Sala virtual (Google Meet): link será informado no Sigaa e enviado por e-mail.</li>
+<li>Apresentações usadas nas aulas: <a href="https://ericbrasil.com.br/hd-ufrrj/aulas">Clique aqui</a></li>
+<li><a href="https://github.com/ericbrasiln/hd-ufrrj">Repositório GitHub</a></li>
+</ul>
+</section>
+<section id="conteúdo-programático" class="level2">
+<h2 class="anchored" data-anchor-id="conteúdo-programático">Conteúdo Programático</h2>
+<p>O programa inclui:</p>
+<ul>
+<li>Debates teóricos sobre história digital, memória coletiva e história pública</li>
+<li>Oficinas práticas sobre ferramentas digitais para pesquisa histórica</li>
+<li>Discussões sobre ética, inteligência artificial, big data e suas implicações na história</li>
+<li>Análise de casos e experimentos com LLMs, RAGs, chatbots e outras aplicações</li>
+</ul>
+<p>O conteúdo detalhado está disponível na <a href="https://ericbrasil.com.br/hd-ufrrj/ementa">ementa</a>.</p>
+</section>
+<section id="como-contribuir" class="level2">
+<h2 class="anchored" data-anchor-id="como-contribuir">Como Contribuir</h2>
+<p>Sugestões, correções ou novos materiais podem ser enviadas via <em>pull request</em> ou <em>issues</em> neste repositório.</p>
+</section>
+<section id="licença" class="level2">
+<h2 class="anchored" data-anchor-id="licença">Licença</h2>
+<p>Este trabalho está licenciado sob a Licença <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Atribuição 4.0 Internacional (CC BY 4.0)</a>.</p>
+</section>
+<section id="contato" class="level2">
+<h2 class="anchored" data-anchor-id="contato">Contato</h2>
+<p>Para mais informações ou dúvidas, entre em contato pelo e-mail fornecido acima ou abra uma <em>issue</em> neste repositório.</p>
 <hr>
+<p>A versão atual corresponde ao semestre 2025.2 e está no ramo <code>main</code>.</p>
+<hr>
+<p>© 2025 Eric Brasil - Todos os direitos reservados.</p>
 <p><img src="https://omekas.im.ufrrj.br/files/original/aa99fe174fd6f97dd42ee78a359a46428b9997be.png" class="img-fluid"></p>
+</section>
 </section>
 
 </main>
