--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="recursos-e-materiais">Recursos e Materiais</h2>
 <ul>
 <li>Sala virtual (Google Meet): link será informado no Sigaa e enviado por e-mail.</li>
-<li>Apresentações usadas nas aulas: <a href="https://ericbrasil.com.br/hd-ufrrj/aulas">Clique aqui</a></li>
+<li>Apresentações usadas nas aulas: <a href="">EM BREVE</a></li>
 <li><a href="https://github.com/ericbrasiln/hd-ufrrj">Repositório GitHub</a></li>
 </ul>
 </section>
