atualização da ementa

--- a/ementa.html
+++ b/ementa.html
@@ -210,9 +210,20 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
+<p><strong>Bibliografia Básica</strong></p>
+<ul>
+<li>JARDIM, José Maria. As novas tecnologias da informação e o futuro dos arquivos. <em>Revista Estudos Históricos</em>, v. 5, n.&nbsp;10, p.&nbsp;251–260, 30 jul. 1992. <a href="https://periodicos.fgv.br/reh/article/view/1942">Link</a>.</li>
+<li>SILVEIRA, P. T. DA. “4. Das novas mídias aos objetos digitais.” In: <strong>História, técnica e novas mídias: reflexões sobre a história na era digital</strong>. Tese de doutorado. Porto Alegre: UFRGS, 2018. <a href="https://lume.ufrgs.br/handle/10183/189249">Link</a>.</li>
+</ul>
+<p><strong>Bibliografia Complementar</strong></p>
+<ul>
+<li>ALVES, D. As Humanidades Digitais como uma comunidade de práticas dentro do formalismo académico: dos exemplos internacionais ao caso português. Ler História, n.&nbsp;69, p.&nbsp;91–103, 30 dez. 2016. <a href="https://journals.openedition.org/lerhistoria/2496">Link</a>.</li>
+</ul>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="ericbrasil.com.br/hd-ufrrj/aulas/2">Slides da aula 2</a></li>
+<li><a href="https://youtu.be/xcjgm6ctzAw?si=KWMzasYxj4Ihz_n3">História do Código Morse</a> (YouTube)</li>
+</ul>
 </section>
 <section id="semana-3" class="level3">
 <h3 class="anchored" data-anchor-id="semana-3">Semana 3</h3>
