--- a/aulas/2.html
+++ b/aulas/2.html
@@ -136,10 +136,10 @@
 
   <p class="date">quarta-feira, 20 de agosto de 2025</p>
 </section>
-<section id="acesse-os-slides" class="slide level2 center">
-<h2>Acesse os slides</h2>
+<section id="acesse-os-slides-da-aula" class="slide level2 center">
+<h2>Acesse os slides da aula</h2>
 
-<img data-src="../imgs/unicorn.jpg" class="r-stretch"><p><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/2"><strong>ericbrasil.com.br/hd-ufrrj/aulas/2</strong></a></p>
+<img data-src="./imgs/qrc2.png" class="quarto-figure quarto-figure-center r-stretch"><p><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/2"><strong>ericbrasil.com.br/hd-ufrrj/aulas/2</strong></a></p>
 </section>
 <section id="o-que-é-tecnologia" class="slide level2 center">
 <h2>O que é tecnologia?</h2>
