update da aula 2

--- a/aulas/2.html
+++ b/aulas/2.html
@@ -386,18 +386,39 @@
 <section id="historicidade-da-mudança-tecnológica" class="slide level2 center">
 <h2>1. Historicidade da mudança tecnológica</h2>
 <ul>
-<li>Jardim vê os anos 1990 como marco de uma “Segunda Revolução Industrial” → da mecanização para a informação.<br>
+<li>Anos 1990 como marco de uma “<sub>Segunda</sub> [!?!?!] Terceira Revolução Industrial” → <em>Era da informação.</em><br>
 </li>
-<li>A informação passa a ser produto estratégico, ligado ao poder econômico.<br>
-</li>
+<li>Armazenamento, disseminação, criação e gestão de informações em escala sem precedentes no anos 1990. E hoje?</li>
+<li>Formato X Conteúdo. O meio (físico) era central para definir o documento: a informação não era pensada como uma entidade específica (até os anos 1950).</li>
+</ul>
+</section>
+<section id="historicidade-da-mudança-tecnológica-1" class="slide level2 center">
+<h2>1. Historicidade da mudança tecnológica</h2>
+<blockquote>
+<p>“As sociedades modernas estão sob um ‘choque informático’ ou seja, suas estruturas econômicas, sociais e culturais estão sendo profundamente alteradas com as novas tecnologias da informação.” (p.&nbsp;253).</p>
+</blockquote>
+<ul>
 <li><strong>Questão:</strong> essa sensação de ruptura e aceleração lembra a forma como hoje falamos da chegada das <strong>IAs generativas</strong>?</li>
 </ul>
 </section>
 <section id="impactos-nos-arquivos-e-na-arquivologia" class="slide level2 center">
 <h2>2. Impactos nos arquivos e na arquivologia</h2>
 <ul>
-<li>Emergência dos documentos eletrônicos → desafio aos conceitos de <em>original</em>, <em>proveniência</em> e <em>preservação</em>.<br>
-</li>
+<li>As Instituições arquivísticas se organizavam em torno do formato físico dos documentos, como papel, microfilme, etc.</li>
+<li>O digital impõe uma mudança: pensar abstratamente no “conjunto de símbolos que chamamos de informação.”</li>
+</ul>
+</section>
+<section id="impactos-nos-arquivos-e-na-arquivologia-1" class="slide level2 center">
+<h2>2. Impactos nos arquivos e na arquivologia</h2>
+<ul>
+<li>Documentos eletrônicos possuem “analogias com o documento papel”, mas estão sendo alterados: “<em>documento hipermídia</em>” (p.&nbsp;254).</li>
+<li><strong>Questão:</strong> O que é um PDF e qual seu impacto para a pesquisa nas Humanidades digitais?</li>
+</ul>
+</section>
+<section id="impactos-nos-arquivos-e-na-arquivologia-2" class="slide level2 center">
+<h2>2. Impactos nos arquivos e na arquivologia</h2>
+<ul>
+<li>Emergência dos documentos eletrônicos → desafio aos conceitos de <em>original</em>, <em>proveniência</em> e <em>preservação</em> entre outros (p.&nbsp;254).</li>
 <li>Arquivista precisa atuar desde a produção até o acesso e migração tecnológica.<br>
 </li>
 <li><strong>Questão:</strong> até que ponto os desafios apontados em 1992 permanecem atuais (big data, nuvem, digital born)?</li>
@@ -406,7 +427,7 @@
 <section id="tecnologia-e-desigualdade" class="slide level2 center">
 <h2>3. Tecnologia e desigualdade</h2>
 <ul>
-<li>Jardim aponta o <strong>“colonialismo informacional”</strong> → concentração dos bancos de dados nos EUA e Europa.<br>
+<li>Jardim aponta o <strong>“novo colonialismo via novas tecnologias”</strong> → concentração dos bancos de dados nos EUA e Europa.<br>
 </li>
 <li>Novas tecnologias reforçam desigualdades globais.<br>
 </li>
@@ -423,8 +444,54 @@
 <li><strong>Questão:</strong> quais paralelos podemos fazer com a situação atual da preservação digital no Brasil?</li>
 </ul>
 </section>
-<section class="slide level2">
-
+<section id="debate-do-texto-1" class="slide level2 center">
+<h2>Debate do texto:</h2>
+<blockquote>
+<p>SILVEIRA, Pedro Telles da. História, técnica e novas mídias : reflexões sobre a história na era digital. <strong>Doutorado</strong> — Porto Alegre: UFRGS, 2018.</p>
+</blockquote>
+<ul>
+<li><strong>Ponto central:</strong> impacto das novas mídias digitais na prática historiográfica → do paradigma impresso aos objetos digitais.</li>
+</ul>
+</section>
+<section id="o-que-são-as-novas-mídias" class="slide level2 center">
+<h2>1. O que são as “novas mídias”?</h2>
+<ul>
+<li>Não se trata apenas de novos suportes, mas de novas formas de produzir, armazenar e acessar informação.<br>
+</li>
+<li>O digital gera documentos de natureza própria: <strong>objetos digitais</strong>.<br>
+</li>
+<li><strong>Questão:</strong> como diferenciar um documento digitalizado de um objeto nascido-digital?</li>
+</ul>
+</section>
+<section id="transformações-na-pesquisa-histórica" class="slide level2 center">
+<h2>2. Transformações na pesquisa histórica</h2>
+<ul>
+<li>O digital muda o <strong>regime de historicidade</strong> → aceleração do tempo, excesso de fontes, novas formas de memória.<br>
+</li>
+<li>Arquivos e bancos de dados digitais tornam-se <strong>atores ativos</strong> na construção da história.<br>
+</li>
+<li><strong>Questão:</strong> como essa abundância de dados impacta a forma de fazer pesquisa histórica hoje?</li>
+</ul>
+</section>
+<section id="desafios-teóricos-e-metodológicos" class="slide level2 center">
+<h2>3. Desafios teóricos e metodológicos</h2>
+<ul>
+<li>Crítica das fontes deve incluir <strong>formatos, sistemas e softwares</strong> que constituem o documento.<br>
+</li>
+<li>Risco de naturalizar o digital como mera ferramenta.<br>
+</li>
+<li><strong>Questão:</strong> em que medida precisamos reinventar a “crítica das fontes” diante dos objetos digitais?</li>
+</ul>
+</section>
+<section id="história-digital-e-interdisciplinaridade" class="slide level2 center">
+<h2>4. História Digital e interdisciplinaridade</h2>
+<ul>
+<li>História Digital não é só uso de ferramentas, mas um <strong>novo regime epistemológico</strong>.<br>
+</li>
+<li>Exige diálogo com <strong>Ciência da Informação, Arquivologia e Computação</strong>.<br>
+</li>
+<li><strong>Questão:</strong> a História Digital é uma “nova disciplina” ou apenas uma ampliação metodológica da História?</li>
+</ul>
 
 </section>
     </div>
