update bibliografia da ementa

--- a/ementa.html
+++ b/ementa.html
@@ -302,9 +302,21 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
+<p><strong>Bibliografia Básica</strong></p>
+<ul>
+<li>BRASIL, Eric; NASCIMENTO, Leonardo F. História digital: reflexões a partir da Hemeroteca Digital Brasileira e do uso de CAQDAS na reelaboração da pesquisa histórica. <em>Revista Estudos Históricos</em>, v. 33, n.&nbsp;69, p.&nbsp;196–219, 2020.</li>
+<li>JENSEN, Helle Strandgaard. Digital Archival Literacy for (all) Historians. <em>Media History</em>, v. 27, n.&nbsp;2, p.&nbsp;251–265, 2021.</li>
+</ul>
+<p><strong>Bibliografia Complementar</strong></p>
+<ul>
+<li>BRASIL, Eric. Interfaces de hemerotecas digitais em português: análise crítica e desafios para o desenvolvimento de uma nova geração de acervos históricos. <em>Matraga - Revista do Programa de Pós-Graduação em Letras da UERJ</em>, v. 32, n.&nbsp;65, p.&nbsp;325–346, 31 maio 2025.</li>
+<li>PUTNAM, Lara. The Transnational and the Text-Searchable: Digitized Sources and the Shadows They Cast. <em>The American Historical Review</em>, v. 121, n.&nbsp;2, p.&nbsp;377–402, abr. 2016.</li>
+<li>SOLBERG, Janine. Googling the Archive: Digital Tools and the Practice of History. <em>Advances in the History of Rhetoric</em>, v. 15, n.&nbsp;1, p.&nbsp;53–76, 1 jan. 2012.</li>
+</ul>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li>EM BREVE</li>
+</ul>
 </section>
 <section id="semana-6" class="level3">
 <h3 class="anchored" data-anchor-id="semana-6">Semana 6</h3>
@@ -356,8 +368,16 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
+<p><strong>Bibliografia Básica</strong></p>
+<ul>
+<li>BLOCH, Marc. <strong>Apologia da história ou o ofício do historiador</strong>. Rio de Janeiro: Jorge Zahar, 2001. Pp. 51-87</li>
+<li>FORTES, Alexandre; ALVIM, Leandro Guimarães Marques. Evidências, códigos e classificações: o ofício do historiador e o mundo digital. <em>Esboços: histórias em contextos globais</em>, v. 27, n.&nbsp;45, p.&nbsp;207–227, 19 jun. 2020.</li>
+</ul>
+<p><strong>Bibliografia Complementar</strong></p>
+<ul>
+<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. abr. 2022.</li>
+<li>BŁOCH, Agata; VASQUES FILHO, Demival; BOJANOWSKI, Michał. Networks from archives: Reconstructing networks of official correspondence in the early modern Portuguese empire. <em>Social Networks</em>, 24 set. 2020.</li>
+</ul>
 <p><strong>Material de apoio</strong> - EM BREVE</p>
 </section>
 <section id="semana-8" class="level3">
