atualização oficina e biblio

--- a/ementa.html
+++ b/ementa.html
@@ -248,9 +248,34 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li>Links oficiais das ferramentas apresentadas na oficina:
+<ul>
+<li><a href="https://tropy.org/">Tropy</a></li>
+<li><a href="https://www.zotero.org/">Zotero</a></li>
+<li><a href="https://omeka.org/">Omeka</a></li>
+<li><a href="https://obsidian.md/">Obsidian</a></li>
+<li><a href="https://commonmark.org/">Markdown</a></li>
+<li><a href="https://github.com/marktext/marktext">MarkText</a></li>
+<li><a href="https://quarto.org/">Quarto</a></li>
+</ul></li>
+<li>Vídeos de apoio:
+<ul>
+<li><a href="https://youtu.be/CPdhyKboKC0?si=LnpLjIqSrC7xlsaX">Zotero do Zero - Tutorial de instalação do Zotero no Windows 10</a></li>
+<li><a href="https://youtu.be/I5ohkh5d51Y?si=81EfwA5mJBGo1O35">Workshop de Zotero - Ferramentas Digitais e a pesquisa em Humanidades.</a></li>
+<li><a href="https://www.youtube.com/live/PE8WpSoYiFw?si=VS1QcODzx1Q0qEHp">Oficina: Organização, anotação e classificação de fontes primárias com Tropy | Anita Lucchesi</a></li>
+<li><a href="https://youtube.com/playlist?list=PLg21c7Nu0pVmEXiA0hrNanUFjglxWcy_R&amp;si=4W-Eg8zo0B_mlzBV">Curso de Omeka | Danielle Sanches</a></li>
+<li><a href="https://www.youtube.com/watch?v=TtnATYla2gE">Uma introdução ao Markdown e suas possibilidades no ensino e divulgação científica | Eric Brasil</a></li>
+</ul></li>
+<li>Tutoriais:
+<ul>
+<li><a href="https://programminghistorian.org/pt/licoes/introducao-ao-markdown">Sarah Simpkin, “Introdução ao Markdown”, traduzido por João Gilberto Neves Saraiva, Programming Historian em português 1 (2021), https://doi.org/10.46430/phpt0008.</a></li>
+<li><a href="https://programminghistorian.org/pt/licoes/autoria-sustentavel-texto-simples-pandoc-markdown">Dennis Tenen e Grant Wythoff, “Autoria Sustentável em Texto Simples usando Pandoc e Markdown”, traduzido por Gabriela Kucuruza, Programming Historian em português 2 (2022), https://doi.org/10.46430/phpt0036.</a></li>
+<li><a href="https://programminghistorian.org/pt/licoes/introducao-omeka-net">Miriam Posner, “Introdução ao Omeka.net”, traduzido por Gabriela Kucuruza, Programming Historian em português 1 (2021), https://doi.org/10.46430/phpt0011.</a></li>
+<li><a href="https://programminghistorian.org/pt/licoes/criar-exposicao-omeka">Miriam Posner e Megan R. Brett, “Criar uma Exposição Omeka”, traduzido por Gabriela Kucuruza, Programming Historian em português 1 (2021), https://doi.org/10.46430/phpt0012.</a></li>
+</ul></li>
+</ul>
 </section>
 <section id="semana-4" class="level3">
 <h3 class="anchored" data-anchor-id="semana-4">Semana 4</h3>
@@ -275,9 +300,35 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li>Links oficiais das ferramentas apresentadas na oficina:
+<ul>
+<li><a href="https://git-scm.com/">Git</a></li>
+<li><a href="github.com">GitHub</a></li>
+<li><a href="https://zenodo.org/">Zenodo</a></li>
+<li><a href="https://osf.io/">OSF</a></li>
+<li><a href="https://gephi.org/">Gephi</a></li>
+<li><a href="https://qgis.org/">QGIS</a></li>
+<li><a href="https://voyant-tools.org/">Voyant Tools</a></li>
+<li><a href="https://www.laurenceanthony.net/software/antconc/">AntConc</a></li>
+<li><a href="https://openrefine.org/">OpenRefine</a></li>
+<li><a href="https://www.audacityteam.org/">Audacity</a></li>
+<li><a href="https://obsproject.com/">OBS Studio</a></li>
+<li><a href="https://kdenlive.org/">Kdenlive</a></li>
+<li><a href="https://storymap.knightlab.com/">StoryMapJS</a></li>
+<li><a href="https://timeline.knightlab.com/">TimelineJS</a></li>
+<li><a href="https://ffmpeg.org/">FFmpeg</a></li>
+</ul></li>
+<li>Vídeos de apoio:
+<ul>
+<li><a href=""></a></li>
+</ul></li>
+<li>Tutoriais:
+<ul>
+<li><a href=""></a></li>
+</ul></li>
+</ul>
 </section>
 <section id="semana-5" class="level3">
 <h3 class="anchored" data-anchor-id="semana-5">Semana 5</h3>
@@ -304,18 +355,27 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
-<li>BRASIL, Eric; NASCIMENTO, Leonardo F. História digital: reflexões a partir da Hemeroteca Digital Brasileira e do uso de CAQDAS na reelaboração da pesquisa histórica. <em>Revista Estudos Históricos</em>, v. 33, n.&nbsp;69, p.&nbsp;196–219, 2020.</li>
-<li>JENSEN, Helle Strandgaard. Digital Archival Literacy for (all) Historians. <em>Media History</em>, v. 27, n.&nbsp;2, p.&nbsp;251–265, 2021.</li>
+<li>BRASIL, Eric; NASCIMENTO, Leonardo F. História digital: reflexões a partir da Hemeroteca Digital Brasileira e do uso de CAQDAS na reelaboração da pesquisa histórica. <em>Revista Estudos Históricos</em>, v. 33, n.&nbsp;69, p.&nbsp;196–219, 2020. <a href="http://dx.doi.org/10.1590/S2178-14942020000100011">Link</a>.</li>
+<li>JENSEN, Helle Strandgaard. Digital Archival Literacy for (all) Historians. <em>Media History</em>, v. 27, n.&nbsp;2, p.&nbsp;251–265, 2021. <a href="https://doi.org/10.1080/13688804.2020.1779047">Link</a>.</li>
 </ul>
 <p><strong>Bibliografia Complementar</strong></p>
 <ul>
-<li>BRASIL, Eric. Interfaces de hemerotecas digitais em português: análise crítica e desafios para o desenvolvimento de uma nova geração de acervos históricos. <em>Matraga - Revista do Programa de Pós-Graduação em Letras da UERJ</em>, v. 32, n.&nbsp;65, p.&nbsp;325–346, 31 maio 2025.</li>
-<li>PUTNAM, Lara. The Transnational and the Text-Searchable: Digitized Sources and the Shadows They Cast. <em>The American Historical Review</em>, v. 121, n.&nbsp;2, p.&nbsp;377–402, abr. 2016.</li>
-<li>SOLBERG, Janine. Googling the Archive: Digital Tools and the Practice of History. <em>Advances in the History of Rhetoric</em>, v. 15, n.&nbsp;1, p.&nbsp;53–76, 1 jan. 2012.</li>
+<li>BRASIL, Eric. Interfaces de hemerotecas digitais em português: análise crítica e desafios para o desenvolvimento de uma nova geração de acervos históricos. <em>Matraga - Revista do Programa de Pós-Graduação em Letras da UERJ</em>, v. 32, n.&nbsp;65, p.&nbsp;325–346, 31 maio 2025. <a href="https://doi.org/10.12957/matraga.2025.89783">Link</a>.</li>
+<li>PUTNAM, Lara. The Transnational and the Text-Searchable: Digitized Sources and the Shadows They Cast. <em>The American Historical Review</em>, v. 121, n.&nbsp;2, p.&nbsp;377–402, abr. 2016. <a href="https://www.jstor.org/stable/43955768">Link</a>.</li>
+<li>SOLBERG, Janine. Googling the Archive: Digital Tools and the Practice of History. <em>Advances in the History of Rhetoric</em>, v. 15, n.&nbsp;1, p.&nbsp;53–76, 1 jan. 2012. <a href="https://doi.org/10.1080/15362426.2012.657052">Link</a>.</li>
 </ul>
 <p><strong>Material de apoio</strong></p>
 <ul>
-<li>EM BREVE</li>
+<li>Repositórios e plataformas online de fontes históricas e artigos
+<ul>
+<li><a href="http://rima.im.ufrrj.br:8080/jspui/handle/1235813/2">Repositório Institucional RIMA – Comunidade CEDIM</a></li>
+<li><a href="">Hemeroteca Digital da Biblioteca Nacional</a></li>
+<li><a href="">SIAN – Arquivo bacional</a></li>
+</ul></li>
+<li>Vídeos
+<ul>
+<li><a href="https://youtu.be/KbUWfeCywg4">LIVES DA BN | Ferramentas online: a Hemeroteca Digital Brasileira</a></li>
+</ul></li>
 </ul>
 </section>
 <section id="semana-6" class="level3">
